Calibrar caja naranja

--- a/Login/Login/Login.csproj
+++ b/Login/Login/Login.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="DatosPersonalesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="DetallesServicioPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MenuPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
